make changing of images

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img id="slider" src="images/pic-1.jpg" alt="">
     </header>
+
+    <script src="js/slider.js"></script>
 </body>
 </html>
